--- a/views/auth.ejs
+++ b/views/auth.ejs
@@ -134,8 +134,7 @@
   }
 
   body {
-    background: radial-gradient(circle at 1px 1px, #e7e7e7 1px, white 0px) 0% 0% /
-      25px 25px;
+    background: radial-gradient(circle at 1px 1px, #d7d7d7 1px, white 0px) 0% 0% / 25px 25px;
     font-family: Onest, Verdana, Geneva, Tahoma, sans-serif;
     position: relative;
     display: flex;
